--- a/styles/style.css
+++ b/styles/style.css
@@ -93,18 +93,6 @@ nav ul {
   gap: 8px;
 }
 
-/* .hero-content {
-  max-width: 550px;
-  margin: 0 auto;
-  padding: 115px 0;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 8px;
-} */
-
 .hero {
   background-image: url("../assets/hero-bg.png");
   background-size: cover;
@@ -155,6 +143,57 @@ p {
   right: 24px;
 }
 
+.about hr {
+  border: none;
+  height: 1px;
+  background-color: rgba(145, 0, 248, 0.3);
+  margin: 40px auto;
+}
+
+.about h1 {
+  font-size: 48px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.about p {
+  color: white;
+  opacity: 80%;
+}
+
+.about-text p {
+  line-height: 30px;
+}
+
+.info-card .info-card-title {
+  font-size: 48px;
+  font-weight: bold;
+  color: #00ff88;
+}
+
+.info-card {
+  /* width: 240px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+.about-info {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+}
+
+.about {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 120px;
+}
+
 /* Responsive */
 @media screen and (max-width: 576px) {
   header ul,
@@ -193,6 +232,14 @@ p {
 
   .new {
     right: -16px;
+  }
+
+  .about-info {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .about {
+    margin-bottom: 40px;
   }
 }
 
