--- a/styles/style.css
+++ b/styles/style.css
@@ -109,7 +109,7 @@ nav ul {
 
 .microphone {
   position: absolute;
-  left: 35%;
+  left: 33%;
   top: 20%;
 }
 
@@ -194,8 +194,226 @@ p {
   margin-bottom: 120px;
 }
 
+.choose {
+  background-color: #230e3d;
+  padding: 120px 0;
+}
+
+.choose-container h1 {
+  color: white;
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 40px;
+}
+
+.choose-grid div img {
+  width: 50px;
+}
+
+.choose-grid div {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+  background-color: rgb(53, 17, 101, 0.4);
+  border-radius: 40px;
+}
+
+.choose-grid h6 {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.choose-grid p {
+  color: white;
+  opacity: 80%;
+  text-align: left;
+  line-height: 25px;
+}
+
+.choose-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.box-1 {
+  grid-row: span 2;
+}
+
+.box-2 {
+  grid-column: span 2;
+}
+
+.box-3 {
+  grid-column: span 2;
+}
+
+.box-4 {
+  grid-column: span 2;
+}
+
+.time {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  color: #00ff88;
+  font-weight: 500;
+}
+
+.feature-card h4 {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+}
+
+.feature-card p {
+  color: white;
+  opacity: 80%;
+  line-height: 24px;
+  text-align: left;
+}
+
+.features {
+  padding: 40px 20px;
+}
+
+.features h1 {
+  text-align: center;
+  color: white;
+  font-size: 48px;
+}
+
+.feature-card {
+  width: 400px;
+}
+
+.feature-card-text {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  background-color: #250d44;
+  border-radius: 0 0 40px 40px;
+}
+
+.features-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.features > h1 {
+  margin: 40px 0;
+}
+
+.host h1 {
+  color: white;
+  font-size: 48px;
+  text-align: center;
+  margin: 40px;
+}
+
+.host p {
+  color: white;
+  opacity: 80%;
+  line-height: 25px;
+}
+
+.alex-info h3 {
+  font-size: 32px;
+  color: white;
+}
+
+.alex-social div {
+  height: 40px;
+  width: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.alex-social {
+  display: flex;
+  gap: 8px;
+}
+
+.host-container {
+  background-color: #230e3d;
+  border-radius: 40px;
+  padding: 40px;
+}
+
+.alex-kumar-card {
+  display: flex;
+  gap: 24px;
+}
+
+.alex-info {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: flex-start;
+}
+
+.alex-info p {
+  text-align: left;
+}
+
+.host-container {
+  margin-bottom: 120px;
+}
+
 /* Responsive */
 @media screen and (max-width: 576px) {
+  .host-container {
+    margin-bottom: 40px;
+  }
+
+  .alex-info h3 {
+    text-align: center;
+  }
+
+  .alex-info p {
+    text-align: center;
+  }
+  .host-container {
+    padding: 24px;
+  }
+
+  .host {
+    padding: 20px;
+  }
+
+  .alex-kumar-card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .alex-social {
+    justify-content: center;
+  }
+
+  .alex-info h3 {
+    font-size: 24px;
+  }
+
+  .host > h1 {
+    font-size: 32px;
+    margin-bottom: 24px;
+    margin-top: 0;
+  }
+
+  .features h1 {
+    font-size: 32px;
+  }
+
   header ul,
   button {
     display: none;
@@ -240,6 +458,57 @@ p {
 
   .about {
     margin-bottom: 40px;
+    margin-top: 0;
+  }
+
+  .choose-grid div {
+    padding: 24px;
+  }
+
+  .choose-grid {
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr;
+  }
+
+  .box-1 {
+    grid-row: span 1;
+  }
+
+  .box-2 {
+    grid-column: span 1;
+  }
+
+  .box-3 {
+    grid-column: span 1;
+  }
+
+  .box-4 {
+    grid-column: span 1;
+  }
+
+  .choose {
+    padding: 20px;
+  }
+
+  .features-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .feature-card {
+    width: 100%;
+    border-radius: 40px !important;
+  }
+
+  .video-container {
+    width: 100%;
+  }
+
+  .features-content {
+    padding: 40px 0 24px 0;
+  }
+  .features > h1 {
+    margin: 0;
   }
 }
 
